--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
 
 <!-- NAVIGATION -->
 <div class="nav">
-  <button data-page="1" class="active">Accueil</button>
+  <button data-page="1" class="active">J.A galbi</button>
   <button data-page="2">Neb9ik</button>
   <button data-page="3">Souvenirs</button>
 </div>
@@ -413,7 +413,7 @@
     <div class="title">Joyeux anniversaire</div>
     <div class="name">Mon amour</div>
     <p class="message">
-      Bienvenue sur ton petit site rien qu'à toi.  
+      Happy birthdayyyyyyy Hayatiiiiii  
       Clique sur « Neb9ik » pour découvrir un message spécial,  
       et sur « Souvenirs » pour revivre quelques moments que j'adore avec toi. ❤️
     </p>
@@ -424,12 +424,12 @@
 
   <!-- PAGE 2 -->
   <section class="page" id="page2">
-    <div class="subtitle">Pour la plus belle personne</div>
+    <div class="subtitle">L 9le insan v denye</div>
     <h1 class="birthday-header" id="birthday-text"></h1>
     <p class="message">
       Merci d'être celle qui remplit ma vie de rires, de douceur et de paix.  
-      Je te promets de toujours te soutenir, te faire sourire et t'aimer un peu plus chaque jour.  
-      Que cette nouvelle année t'apporte tout ce dont tu rêves… et encore plus. 💖
+      Je te promets de toujours te soutenir te faire sourire(leyn yessel7ou seneyk) et t'aimer un peu plus chaque jour ye le gossa  
+     Allah yeje3lou 3am mbarek 3lik inchallah w ywef9ek vih w ya36ik li tetmenay kamel 💖
     </p>
     <div class="btn-group">
       <button class="btn" id="confetti-btn">Lancer 🎉</button>
@@ -449,39 +449,39 @@
           <div class="timeline-date">25/03/2025</div>
           <div class="timeline-content card">
             <img src="image1.png" onerror="this.src='https://via.placeholder.com/300x160/ff69b4/fff?text=❤️+Début'" alt="Notre début">
-            <h3>Notre début</h3>
-            <p>Le jour où tout a commencé entre nous 🥰</p>
+            <h3>27/03</h3>
+            <p>ktechevet nek m3aybra w kan bidayet kelchi 🥰</p>
           </div>
         </div>
         <div class="timeline-item">
           <div class="timeline-date">04/05/2025</div>
           <div class="timeline-content card">
             <img src="image2.png" onerror="this.src='https://via.placeholder.com/300x160/ff1493/fff?text=💕+2e+rencontre'" alt="2e rencontre">
-            <h3>Deuxième rencontre</h3>
-            <p>Tout était encore plus clair ✨</p>
+            <h3>10/05</h3>
+            <p>Wda7 kelchi ( i want u 4 life)✨</p>
           </div>
         </div>
         <div class="timeline-item">
           <div class="timeline-date">01/08/2025</div>
           <div class="timeline-content card">
             <img src="image3.png" onerror="this.src='https://via.placeholder.com/300x160/c71585/fff?text=😜+Ra7etna'" alt="Ra7etne">
-            <h3>Ra7etne v Nkc</h3>
-            <p>Pleine de délires et complicité 🔥</p>
+            <h3>01/08</h3>
+            <p>Ra7ene v nkc zyen ra7a v hayati🔥</p>
           </div>
         </div>
         <div class="timeline-item">
           <div class="timeline-date">01/11/2025</div>
           <div class="timeline-content card">
             <img src="image4.png" onerror="this.src='https://via.placeholder.com/300x160/db7093/fff?text=🏙️+Rabat'" alt="Rabat">
-            <h3>Jeytek à Rabat</h3>
-            <p>La ville était plus belle avec toi 🌃</p>
+            <h3>01/11 Jeytek v Rabat</h3>
+            <p>kanou ezyen eyam 🌃</p>
           </div>
         </div>
         <div class="timeline-item">
           <div class="timeline-date">08/11/2025</div>
           <div class="timeline-content card">
             <img src="image5.png" onerror="this.src='https://via.placeholder.com/300x160/ff1493/fff?text=💃+Nhar+tali'" alt="Nhar tali">
-            <h3>Nhar tali à Rabat</h3>
+            <h3>Nhar tali Rabat</h3>
             <p>Encore plus de souvenirs 💖</p>
           </div>
         </div>
@@ -489,8 +489,8 @@
           <div class="timeline-date">12/01/2026</div>
           <div class="timeline-content card">
             <img src="image6.png" onerror="this.src='https://via.placeholder.com/300x160/8a2be2/fff?text=🫶+5ra'" alt="Mara 5ra">
-            <h3>Jeytek mara 5ra</h3>
-            <p>Joie, manque, envie de te revoir 😘</p>
+            <h3>12/01 Jeytek mara 5ra ( tfu bik) </h3>
+            <p>neb9ik w neb9ik w neb9ik</p>
           </div>
         </div>
         <div class="timeline-item">
@@ -498,7 +498,7 @@
           <div class="timeline-content card">
             <img src="image7.png" onerror="this.src='https://via.placeholder.com/300x160/ffd700/fff?text=⭐+Aujourd’hui'" alt="Aujourd'hui">
             <h3>Zyen nhar v denye</h3>
-            <p>Le plus beau jour avec toi 🌟</p>
+            <p>kel senne w na7ne v bled</p>
           </div>
         </div>
       </div>
